--- a/_data.yml
+++ b/_data.yml
@@ -1,8 +1,7 @@
 lang: en
 
 home:
-  title: '<a href="https://translate.google.com/?sl=gl&tl=en&text=Lume%20e%20Xeo&op=translate">Lume e Xeo</a> 🔥🧊'
-  intro: "Welcome to **Xeo**, a deluxe variant of [**Lume Simple Blog**](https://lume.land/theme/simple-blog/)"
+  title: '<a href="https://translate.google.com/?sl=gl&tl=en&text=Lume%20e%20Xeo&op=translate">Lume <em>e</em> Xeo</a> 🔥🧊'
 
 menu_links: []
 extra_head: []
