--- a/deno.json
+++ b/deno.json
@@ -8,6 +8,7 @@
     "lume": "echo \"import 'lume/cli.ts'\" | deno run -A -",
     "build": "deno task lume",
     "serve": "deno task lume -s",
+    "d": "deno task serve",
     "cms": "deno task lume cms",
     "lup": "deno task lume upgrade",
     "up": "deno run -A --quiet 'https://deno.land/x/nudd@v0.2.8/cli.ts' update deno.json"
