add location, add Bebas Neue and Lexend from Google Fonts, expand docs

--- a/_data.yml
+++ b/_data.yml
@@ -1,7 +1,7 @@
 lang: en
 
 home:
-  title: '<a href="https://translate.google.com/?sl=gl&tl=en&text=Lume%20e%20Xeo&op=translate">Lume <em>e</em> Xeo</a> 🔥🧊'
+  title: '<a href="https://translate.google.com/?sl=gl&tl=en&text=Lume%20e%20Xeo&op=translate">Lume e Xeo</a> 🔥🧊'
 
 menu_links: []
 extra_head: []
