relocate copyright and intro to _data.yml for cms, update instructions

--- a/_data.yml
+++ b/_data.yml
@@ -1,6 +1,10 @@
 lang: en
 home:
   welcome: "\U0001F525 <a href=\"https://translate.google.com/?sl=gl&tl=en&text=Lume%20e%20Xeo&op=translate\">Lume e Xeo</a> \U0001F9CA"
+  intro: "Welcome to [**Xeo**](https://github.com/famebot/xeo), a *deluxe* variant of [**Lume&nbsp;Simple&nbsp;Blog**](https://lume.land/theme/simple-blog/)"
+
+copyright: "[Xeo](https://github.com/famebot/xeo) &copy; 2022-2025 [Óscar&nbsp;Otero](https://oscarotero.com/) &amp; [Ricky&nbsp;de&nbsp;Laveaga](https://rdela.com/)"
+
 menu_links: []
 metas:
   site: Xeo (demo)
