--- a/netlify.toml
+++ b/netlify.toml
@@ -2,5 +2,5 @@
   publish = "_site"
   command = """
   curl -fsSL https://deno.land/install.sh | sh && \
-  /opt/buildhome/.deno/bin/deno task build \
+  /opt/buildhome/.deno/bin/deno task prod \
 """
