--- a/deno.json
+++ b/deno.json
@@ -1,8 +1,8 @@
 {
   "imports": {
-    "lume/": "https://deno.land/x/lume@v2.5.1/",
+    "lume/": "https://cdn.jsdelivr.net/gh/lumeland/lume@6ca5a17973f4391bd03710888ae51c5a0af08bd5/",
     "blog/": "https://deno.land/x/lume_theme_simple_blog@v0.15.10/",
-    "lume/cms/": "https://cdn.jsdelivr.net/gh/lumeland/cms@0.9.2/"
+    "lume/cms/": "https://cdn.jsdelivr.net/gh/lumeland/cms@0a3d1ffb097b2f5d38a66d31adbe749a53492bf0/"
   },
   "tasks": {
     "lume": "echo \"import 'lume/cli.ts'\" | deno run -A -",
@@ -12,6 +12,7 @@
     "d": "deno task serve",
     "cms": "deno task lume cms",
     "lup": "deno task lume upgrade",
+    "lupd": "deno task lume upgrade --dev",
     "up": "deno run -A --quiet 'https://deno.land/x/nudd@v0.2.9/cli.ts' update deno.json"
   },
   "compilerOptions": {
